[package]
name = "nile-library"
version = "0.0.0-git"
edition = "2021"
license = "MIT"
description = "Library supporting nile"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive" ]}
console_error_panic_hook = "0.1"
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
